# digital

./: .clang-format  CMakeLists.txt  README.md
cmake/: CompilerWarnings.cmake  IDE.cmake  StandardProjectSettings.cmake  StaticAnalyzers.cmake
include/sim/: component.h  net.h  pin.h
include/sim/components/gates/: and_gate.h
src/: CMakeLists.txt  main.cpp
src/sim/: component.cpp  net.cpp  pin.cpp
src/sim/components/gates/: and_gate.cpp
test/: CMakeLists.txt
